--- a/entry/src/main/js/default/pages/index/index.css
+++ b/entry/src/main/js/default/pages/index/index.css
@@ -51,3 +51,9 @@
     top: 85%;
 }
 
+.swiper-item {
+    width: 454px;
+    height: 454px;
+    justify-content: center;
+    align-items: center;
+}
