--- a/entry/src/main/js/default/pages/index/index.css
+++ b/entry/src/main/js/default/pages/index/index.css
@@ -1,4 +1,4 @@
-.min-progress {
+.progress {
     width: 100%;
     height: 100%;
 }
@@ -16,10 +16,14 @@
     height: 100%;
 }
 
-.title .title2 {
+.title{
     width: 200px;
-    height: 35%;
     font-size: 38fp;
+    text-align: center;
+}
+
+.titleSmaller{
+    width: 80%;
     text-align: center;
 }
 
@@ -45,15 +49,7 @@
     background-color: red;
 }
 
-.nextPage {
-    width: 100%;
-    height: 17%;
-    top: 85%;
-}
-
 .swiper-item {
-    width: 454px;
-    height: 454px;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 100%;
 }
