--- a/entry/src/main/js/default/pages/index/index.css
+++ b/entry/src/main/js/default/pages/index/index.css
@@ -1,6 +1,21 @@
-.progress {
+.waterProgress {
     width: 100%;
     height: 100%;
+    start-angle: 0deg;
+    total-angle: 360deg;
+    stroke-width: 40px;
+    color: #00BFFF;
+    background-color:#00475F;
+}
+
+.timeProgress {
+    width: 100%;
+    height: 100%;
+    start-angle: 0deg;
+    total-angle: -360deg;
+    stroke-width: 40px;
+    color: #FE2410;
+    background-color: #5F0D06;
 }
 
 .container {
@@ -16,14 +31,14 @@
     height: 100%;
 }
 
-.title{
-    width: 200px;
+.title {
+    width: 100%;
     font-size: 38fp;
     text-align: center;
 }
 
-.titleSmaller{
-    width: 80%;
+.titleSmaller {
+    width: 100%;
     text-align: center;
 }
 
